# SIMple-Gravity

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  imgui.ini  init.lua  notes.txt  pre-commit  world.ron
docs/: CNAME  index.html  simple_gravity.js  simple_gravity_bg.wasm
docs/wbindgen/: simple_gravity.d.ts  simple_gravity_bg.wasm.d.ts
non_builtin_rhai_scripts/: springs.rhai
rhai_scripts/: basic_orbit.rhai  basic_update.rhai  binary_system.rhai  collisions.rhai  draw_spring.rhai  grid.rhai  scripted_gravity.rhai  scripted_integration.rhai
saved_systems/: bench_grid.lua  bench_grid.ron  binary.lua  binary.ron  binary_star.ron  default.lua  default.ron  grid.lua  grid.ron  nested.lua  nested.ron  save.ron
scripts/: build-web.sh  wasm-bindgen-macroquad.sh
src/: body_creation.rs  camera.rs  components.rs  draw.rs  entities.rs  error.rs  force_lines.rs  graph_sys.rs  imgui_wrapper.rs  input_state.rs  main.rs  main_state.rs  main_state_utils.rs  physics.rs  physics_systems.rs  preview.rs  resources.rs  saveload.rs  scripting.rs  trail_sys.rs  trails.rs  ui.rs
src/ecs/: components.rs  entities.rs  resources.rs
src/ecs/systems/: graph_sys.rs  mod.rs  physics_systems.rs  trail_sys.rs
src/gui/: imgui_wrapper.rs  mod.rs  ui.rs
src/main_state/: draw_utils.rs  lua.rs  main_state_utils.rs  mod.rs  state.rs  update_utils.rs
src/scripting/: samples.rs  util.rs
src/ui/: body_creation.rs  code_editor.rs  graphs.rs  gui.rs  inspect.rs  top_panel.rs
