[package]
name = "simple_gravity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.7.0"
bevy_ecs = "0.5.0"

wasm-bindgen = "0.2.74"

rhai = { version = "1.3.0", features = ["sync", "f32_float"] }

slotmap = "1.0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.55", features = ["Window", "console"] }
js-sys = "*"

[profile.dev.package.'*']
opt-level = 3
